<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/saveRecipe_btnTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeArea"
        tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/clearAll_btnTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeArea"
        tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/txtTitle_string"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/addRecipeName_btnTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnAddIngredients"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/addIngredient_btnTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddRecipe"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnAddInstructions"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/addInstruction_btnTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddIngredients"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edtRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/edtRecipeName_placeholder"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAddRecipe"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/edtIngredients"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/edtIngredients_placeholder"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAddIngredients"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeName" />

    <EditText
        android:id="@+id/edtInstructions"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/edtInstructions_placeholder"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAddInstructions"
        app:layout_constraintTop_toBottomOf="@+id/edtIngredients" />

    <EditText
        android:id="@+id/edtRecipeArea"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|left"
        android:lines="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>